# sentinel-ops

./: .env.example  .gitattributes  .gitignore  Adaptrix_Hackathon_Plan.docx  Dockerfile  README.md  benchmark.py  config.py  docker-compose.yml  env.py  fix_tasks.py  generate_sequences.py  grader.py  implementation_plan.md  inference.py  judge_llm.py  leaderboard.json  models.py  openenv.yaml  plan.txt  pyproject.toml  reporter.py  requirements.txt  run.sh  safety.py  sample-inference-script.sh  start.sh  ui.py  validate-submission.sh
.streamlit/: config.toml
server/: __init__.py  app.py
tasks/easy/: task_001_parking_intrusion.json  task_002_warehouse_access.json  task_007_atm_tampering.json  task_008_night_patrol_false_alarm.json
tasks/hard/: task_005_multi_camera_pursuit.json  task_006_false_alarm_discrimination.json  task_011_coordinated_theft.json  task_012_authorized_access_false_alarm.json  task_013_thermal_perimeter_audit.json  task_022_shadow_deception.json  task_023_long_occlusion.json
tasks/medium/: task_003_corridor_intrusion.json  task_004_lobby_surveillance.json  task_009_rooftop_sabotage.json  task_010_warehouse_progression.json
tests/: __init__.py  test_api.py  test_env.py  test_grader.py
